experimental removal of mandatory root permissions

--- a/razercommander.desktop.in
+++ b/razercommander.desktop.in
@@ -3,6 +3,6 @@ Encoding=UTF-8
 Type=Application
 Categories=Utility
 Terminal=false
-Exec=gksu -S /usr/bin/razercommander
+Exec=/usr/bin/razercommander
 Name=razerCommander
 Icon=/usr/share/razercommander/icon.svg
