--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 export DH_VERBOSE=1
 export NINJA=ninja -v
 export BUILDDIR=_build
-export PKG=transmission-remote-gnome
+export PKG=razercommander
 
 %:
 	dh $@
@@ -19,4 +19,3 @@ override_dh_auto_clean:
 
 override_dh_auto_install:
 	env DESTDIR=$(CURDIR)/debian/$(PKG) $(NINJA) -C $(BUILDDIR) install
-
