--- a/debian/control
+++ b/debian/control
@@ -3,21 +3,26 @@ Section: gnome
 Priority: optional
 Maintainer: Gabriele Musco <emaildigabry@gmail.com>
 Homepage: https://github.com/GabMus/razerCommander
-Standards-Version: 3.9.7
+Standards-Version: 4.1.0
 X-Python3-Version: >= 3.4
 Build-Depends:
  debhelper (>= 9),
- pkg-config,
+ dh-python,
  gettext,
  libappstream-glib-dev,
- meson (>= 0.40.0)
+ meson (>= 0.40.0),
+ pkg-config,
+ python-all
 
 Package: razercommander
 Architecture: all
 Depends:
+ gir1.2-gtk-3.0 (>= 3.14.0),
  python3 (>= 3.4),
- python3-gi (>= 3.14.0),
- gir1.2-gtk-3.0 (>= 3.14.0)
+ python3-gi (>= 3.14.0)
+
 Recommends:
  gnome-icon-theme-symbolic
 Description: Razer device manager for Linux
+ Controls Razer peripherals (mice, keyboards, headphones) enabling the user to
+ customize the light effects and setting up the macro functionality.
