updated appstream info

--- a/data/org.gabmus.razercommander.appdata.xml.in
+++ b/data/org.gabmus.razercommander.appdata.xml.in
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop">
-  <id>org.gabmus.razercommander.desktop</id>
-  <!-- <translation type="gettext">trg</translation> -->
-  <name>razerCommander</name>
-  <developer_name>GabMus</developer_name>
-  <summary>Razer device manager for Linux</summary>
-  <metadata_license>CC0-1.0</metadata_license>
-  <project_license>GPL-3.0+</project_license>
-  <description>
-    <p>Razer device manager for Linux</p>
-  </description>
-  <url type="homepage">https://github.com/GabMus/razerCommander</url>
-  <url type="bugtracker">https://github.com/GabMus/razerCommander/issues</url>
-  <kudos>
-    <kudo>AppMenu</kudo>
-    <kudo>ModernToolkit</kudo>
-  </kudos>
-  <update_contact>emaildigabry_at_gmail.com</update_contact>
+    <id>org.gabmus.razercommander.desktop</id>
+    <!-- <translation type="gettext">trg</translation> -->
+    <name>razerCommander</name>
+    <developer_name>Gabriele Musco</developer_name>
+    <summary>Razer device manager for Linux</summary>
+    <metadata_license>CC0-1.0</metadata_license>
+    <project_license>GPL-3.0+</project_license>
+    <description>
+        <p>razerCommander allows you to control Razer peripherals such as keyboards, mice and more.</p>
+        <p>razerCommander requires the <a href="https://openrazer.github.io">openrazer driver stack to be installed on your system</a></p>
+    </description>
+    <screenshots>
+        <screenshot type="default">
+            <image>https://raw.githubusercontent.com/GabMus/razerCommander/master/preview.gif</image>
+        </screenshot>
+    </screenshots>
+    <url type="homepage">https://github.com/GabMus/razerCommander</url>
+    <url type="bugtracker">https://github.com/GabMus/razerCommander/issues</url>
+    <update_contact>emaildigabry@gmail.com</update_contact>
 </component>
